[project]
name = "data-smith-ai"
version = "0.1.0"
description = "Multi-Input Agentic Application with Planning and Multi-Tool Orchestration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "pydantic>=2.7.4",
    "python-multipart>=0.0.9",
    "google-generativeai>=0.7.0",
    "pypdf>=4.2.0",
    "youtube-transcript-api>=0.6.2",
    "mutagen>=1.47.0",
    "python-dotenv>=1.0.1",
    "supabase>=2.5.0",
]

[tool.uv]
dev-dependencies = []
